--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,621 @@
 /* Yonu can add global styles to this file, and also import other style files */
-button{
-  margin: 5px;
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap");
+* {
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  transition: all 0.2s linear;
 }
 
-.row {
-  border: 1px solid grey;
-  margin-top: 30px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  border-radius: 10px;
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
 }
+html::-webkit-scrollbar {
+  width: 1rem;
+}
+html::-webkit-scrollbar-track {
+  background: #fff;
+}
+html::-webkit-scrollbar-thumb {
+  background: #2597f4;
+  border-radius: 5rem;
+}
+
+section {
+  padding: 5rem 10%;
+}
+
+.heading {
+  text-align: center;
+  margin-bottom: 3rem;
+  font-size: 4rem;
+  text-transform: capitalize;
+  color: #334;
+}
+.heading span {
+  color: #2597f4;
+}
+
+.btn {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 1rem 3rem;
+  cursor: pointer;
+  background: #fff;
+  font-size: 1.7rem;
+  text-transform: capitalize;
+  color: #334;
+  border: 0.2rem solid #334;
+}
+.btn:hover {
+  background: #2597f4;
+  border-color: #2597f4;
+  color: #fff;
+}
+
+/* ======= Header Section/Seção do Cabeçalho ======= */
+.header .contact-info {
+  padding: 2rem 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #2597f4;
+}
+.header .contact-info p {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.header .contact-info p i {
+  padding-right: 0.5rem;
+  color: yellow;
+}
+.header .navbar {
+  padding: 2rem 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #fff;
+  border-bottom: 0.2rem solid #334;
+  position: relative;
+  z-index: 1000;
+}
+.header .navbar.active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-bottom: none;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+.header .navbar .logo {
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  color: #334;
+  font-weight: bolder;
+}
+.header .navbar .logo i {
+  color: #2597f4;
+}
+.header .navbar .links a {
+  margin-left: 2rem;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: #334;
+}
+.header .navbar .links a:hover {
+  text-decoration: underline;
+  color: #2597f4;
+}
+.header #menu-btn {
+  font-size: 3rem;
+  cursor: pointer;
+  color: #334;
+  display: none;
+}
+
+/* ======= Home Section/Seção inicial ======= */
+.home {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+.home .image {
+  flex: 1 1 42rem;
+}
+.home .image img {
+  width: 100%;
+}
+.home .content {
+  flex: 1 1 42rem;
+}
+.home .content h3 {
+  font-size: 4.5rem;
+  text-transform: capitalize;
+  color: #334;
+}
+.home .content p {
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+  padding: 1rem 0;
+}
+
+/* ======= Fun Fact Section/Seção de curiosidades ======= */
+.fun-fact {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 2rem;
+  background: #f5f5f5;
+  gap: 3.5rem;
+}
+.fun-fact .box {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.fun-fact .box img {
+  height: 10rem;
+}
+.fun-fact .box h3 {
+  font-size: 4rem;
+  text-transform: capitalize;
+  color: #334;
+}
+.fun-fact .box p {
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+  padding-top: 0.5rem;
+}
+
+/* ======= About Section/Seção Sobre nós ======= */
+.about {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+  gap: 3rem;
+}
+.about .image {
+  flex: 1 1 40rem;
+}
+.about .image img {
+  width: 100%;
+}
+.about .content {
+  flex: 1 1 42rem;
+}
+.about .content h3 {
+  font-size: 3rem;
+  text-transform: capitalize;
+  color: #334;
+  padding-bottom: 0.5rem;
+}
+.about .content p {
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+  padding: 1rem 0;
+}
+
+/* ======= Services Section/Seção de Serviços ======= */
+.services {
+  background: #f5f5f5;
+}
+.services .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
+}
+.services .box-container .box {
+  text-align: center;
+  background: white;
+  border: 0.2rem solid #334;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  padding: 3rem 2rem;
+}
+.services .box-container .box:hover {
+  background: #334;
+}
+.services .box-container .box:hover h3 {
+  color: #fff;
+}
+.services .box-container .box:hover p {
+  color: #fff;
+}
+.services .box-container .box img {
+  height: 7rem;
+  margin-bottom: 0.5rem;
+}
+.services .box-container .box h3 {
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: #334;
+  padding: 1rem 0;
+}
+.services .box-container .box p {
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+}
+
+/* ======= Gallery Section/Seção de Galeria ======= */
+.gallery .gallery-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
+}
+.gallery .gallery-container .box {
+  height: 25rem;
+  overflow: hidden;
+}
+.gallery .gallery-container .box:hover img {
+  transform: scale(1.1);
+}
+.gallery .gallery-container .box img {
+  height: 100%;
+  width: 100%;
+}
+
+/* ======= Facilities Section/Seção de Instalações ======= */
+.facilities {
+  background: #f5f5f5;
+}
+.facilities .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
+}
+.facilities .box-container .box {
+  background: #fff;
+  padding: 3rem;
+  text-align: center;
+  border: 0.2rem solid #334;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+.facilities .box-container .box:hover {
+  background: #334;
+}
+.facilities .box-container .box:hover h3 {
+  color: #fff;
+}
+.facilities .box-container .box:hover p {
+  color: #fff;
+}
+.facilities .box-container .box img {
+  height: 10rem;
+  margin-bottom: 0.5rem;
+}
+.facilities .box-container .box h3 {
+  padding: 1rem 0;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: #334;
+}
+.facilities .box-container .box p {
+  font-size: 1.4rem;
+  line-height: 2;
+  color: #777;
+}
+
+/* ======= Team Section/Seção de Time ======= */
+.team .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 2rem;
+  align-items: flex-start;
+}
+.team .box-container .box {
+  overflow: hidden;
+  text-align: center;
+}
+.team .box-container .box:hover .content {
+  margin-bottom: 0;
+}
+.team .box-container .box img {
+  width: 100%;
+}
+.team .box-container .box .content {
+  padding: 2rem;
+  margin-bottom: -7rem;
+}
+.team .box-container .box .content h3 {
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: #334;
+}
+.team .box-container .box .content p {
+  font-size: 1.4rem;
+  text-transform: capitalize;
+  color: #334;
+  padding: 0.5rem 0;
+}
+.team .box-container .box .content .share {
+  margin-top: 1.5rem;
+}
+.team .box-container .box .content .share a {
+  height: 4.5rem;
+  width: 4.5rem;
+  line-height: 4.5rem;
+  font-size: 4.5rem;
+  margin: 0 0.3rem;
+  background: #334;
+  color: #fff;
+}
+.team .box-container .box .content .share a:hover {
+  background: #2597f4;
+}
+
+/* ======= Reviews Section/Seção de Reviews ======= */
+.reviews {
+  background: #f5f5f5;
+}
+.reviews .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
+}
+.reviews .box-container .box {
+  text-align: center;
+  padding: 3rem;
+  background: #fff;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  border: 0.2rem solid #334;
+}
+.reviews .box-container .box:hover {
+  background: #334;
+}
+.reviews .box-container .box:hover .text p {
+  color: #fff;
+}
+.reviews .box-container .box:hover .user h3 {
+  color: #fff;
+}
+.reviews .box-container .box .star i {
+  color: #2597f4;
+  font-size: 1.7rem;
+}
+.reviews .box-container .box .text {
+  position: relative;
+  z-index: 0;
+  padding: 1.5rem 0;
+}
+.reviews .box-container .box .text i {
+  font-size: 7rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0.3;
+  color: #2597f4;
+}
+.reviews .box-container .box .text p {
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+}
+.reviews .box-container .box .user img {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  margin-bottom: 0.5rem;
+}
+.reviews .box-container .box .user h3 {
+  font-size: 1.7rem;
+  text-transform: capitalize;
+  color: #334;
+}
+
+/* ======= Contact Section/Seção de Contatos ======= */
+.contact .row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+.contact .row .map {
+  flex: 1 1 42rem;
+  width: 100%;
+  /*largura*/
+}
+.contact .row form {
+  flex: 1 1 42rem;
+  padding: 2rem;
+  border: 0.2rem solid #334;
+}
+.contact .row form h3 {
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  color: #334;
+  padding-bottom: 1rem;
+}
+.contact .row form .inputBox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.contact .row form .inputBox input {
+  width: 49%;
+}
+.contact .row form .inputBox input, .contact .row form textarea {
+  padding: 1.2rem 1.4rem;
+  font-size: 1.6rem;
+  color: #777;
+  margin: 0.7rem 0;
+  border: 0.2rem solid #334;
+}
+.contact .row form .inputBox input:focus, .contact .row form textarea:focus {
+  background: #334;
+  color: #fff;
+}
+.contact .row form .inputBox input:focus::placeholder, .contact .row form textarea:focus::placeholder {
+  color: #fff;
+}
+.contact .row form textarea {
+  width: 100%;
+  /*Largura*/
+  height: 15rem;
+  /*altura*/
+  resize: none;
+}
+
+/* ======= Footer Section/Seção de Rodapé ======= */
+.footer {
+  background: #f5f5f5;
+}
+.footer .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 2rem;
+}
+.footer .box-container .box h3 {
+  font-size: 2.2rem;
+  text-transform: capitalize;
+  color: #334;
+  padding: 1rem 0;
+}
+.footer .box-container .box .link {
+  display: block;
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+}
+.footer .box-container .box .link i {
+  padding-right: 0.5rem;
+  color: #2597f4;
+}
+.footer .box-container .box p {
+  padding: 0.5rem 0;
+  font-size: 1.5rem;
+  line-height: 2;
+  color: #777;
+}
+.footer .box-container .box p span {
+  color: #2597f4;
+}
+.footer .box-container .box .email {
+  width: 100%;
+  border: 0.2rem solid #334;
+  padding: 1.6rem 1.4rem;
+  font-size: 1.6rem;
+  color: #777;
+  margin: 1rem 0;
+}
+.footer .box-container .box .share {
+  margin-top: 2rem;
+}
+.footer .box-container .box .share a {
+  height: 4.5rem;
+  width: 4.5rem;
+  line-height: 4.5rem;
+  font-size: 1.7rem;
+  background: #334;
+  color: #fff;
+  margin-right: 0.3rem;
+  text-align: center;
+}
+.footer .box-container .box .share a:hover {
+  background: #2597f4;
+}
+.footer .credit {
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: #334;
+  margin-top: 3rem;
+  padding-top: 3rem;
+  border-top: 0.2rem solid #334;
+  text-align: center;
+}
+.footer .credit span {
+  color: #2597f4;
+}
+
+/* ======= Responsive/Responsividade ======= */
+@media (max-width: 1200px) {
+  .header .contact-info {
+    padding: 2rem 5%;
+  }
+  .header .navbar {
+    padding: 2rem 5%;
+  }
+
+  section {
+    padding: 3rem 5%;
+  }
+}
+@media (max-width: 991px) {
+  html {
+    font-size: 55%;
+  }
+
+  .header .contact-info {
+    padding: 2rem;
+  }
+  .header .navbar {
+    padding: 2rem;
+  }
+
+  section {
+    padding: 3rem 2rem;
+  }
+}
+@media (max-width: 768px) {
+  .header .contact-info {
+    display: none;
+  }
+  .header #menu-btn {
+    display: inline-block;
+  }
+  .header #menu-btn.fa-times {
+    transform: rotate(180deg);
+  }
+  .header .navbar .links {
+    position: absolute;
+    top: 99%;
+    left: 0;
+    right: 0;
+    background: #fff;
+    border-top: 0.2rem solid #334;
+    border-bottom: 0.2rem solid #334;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
+  .header .navbar .links.active {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+  .header .navbar .links a {
+    display: block;
+    margin: 2.5rem 2rem;
+    font-size: 2.5rem;
+  }
+
+  .fun-fact {
+    padding: 5rem 2rem;
+  }
+  .fun-fact .box {
+    flex-flow: column;
+    text-align: center;
+  }
+}
+@media (max-width: 450px) {
+  html {
+    font-size: 50%;
+  }
+
+  .home .content h3 {
+    font-size: 3rem;
+  }
+
+  .contact .row form .inputBox input {
+    width: 100%;
+  }
+}
+
