Fun fact section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <!-- Principal -->
 
-<!-- Header -->
+<!-- Header Section -->
 <app-header></app-header>
 
-<!-- Home -->
+<!-- Home Section -->
 <app-home></app-home>
 
-
+<!-- Fun Fact Section -->
+<app-fun></app-fun>
 
 
 
