--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,13 @@
 <!-- Services Section -->
 <app-services></app-services>
 
+<!-- Gallery Section -->
+<app-gallery></app-gallery>
+
+
+
+
+
+
+
+
